terraform/securitygroups.tf



resource "aws_security_group" "ecs_service_sg" {
  name        = "ecs-service-sg"
  description = "Allow ECS tasks to communicate and access RDS and internet"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
